kubernetes/core/netdata/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netdata
  namespace: netdata
  annotations:
    tailscale.com/tags: tag:k8s-operator
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: 'Netdata'
    gethomepage.dev/description: 'Real-time system monitoring'
    gethomepage.dev/group: 'Monitoring'
    gethomepage.dev/icon: 'netdata.png'
    gethomepage.dev/href: 'https://netdata.${DOMAIN}/'
    # gethomepage.dev/widget.url: 'https://netdata.${DOMAIN}/'
spec:
  ingressClassName: tailscale
  rules:
    - host: netdata
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netdata
                port:
                  number: 19999
  tls:
    - hosts:
        - netdata
